--- a/src/style.css
+++ b/src/style.css
@@ -10,19 +10,36 @@
     --card-foreground: 240 10% 3.9%;
     --popover: 0 0% 100%;
     --popover-foreground: 240 10% 3.9%;
-    --primary: 240 5.9% 10%;
-    --primary-foreground: 0 0% 98%;
-    --secondary: 240 4.8% 95.9%;
-    --secondary-foreground: 240 5.9% 10%;
+
+    --primary: 222.2 47.4% 11.2%;
+    --primary-50: 210 40% 98%;
+    --primary-100: 210 40% 96%;
+    --primary-200: 214 32% 91%;
+    --primary-300: 213 27% 84%;
+    --primary-400: 215 20% 65%;
+    --primary-500: 215 25% 27%;
+    --primary-600: 217 33% 17%;
+    --primary-700: 222 47% 11%;
+    --primary-800: 229 84% 5%;
+    --primary-900: 228 100% 4%;
+    --primary-950: 229 100% 2%;
+    --primary-foreground: 210 40% 98%;
+
+    --secondary: 210 40% 96.1%;
+    --secondary-foreground: 222.2 47.4% 11.2%;
+    
     --muted: 240 4.8% 95.9%;
     --muted-foreground: 240 3.8% 46.1%;
+    
     --accent: 240 4.8% 95.9%;
     --accent-foreground: 240 5.9% 10%;
+    
     --destructive: 0 84.2% 60.2%;
     --destructive-foreground: 0 0% 98%;
+
     --border: 240 5.9% 90%;
     --input: 240 5.9% 90%;
-    --ring: 240 5.9% 10%;
+    --ring: 215 25% 27%;
     --radius: 0.5rem;
   }
  
@@ -33,19 +50,36 @@
     --card-foreground: 0 0% 98%;
     --popover: 240 10% 3.9%;
     --popover-foreground: 0 0% 98%;
-    --primary: 0 0% 98%;
-    --primary-foreground: 240 5.9% 10%;
-    --secondary: 240 3.7% 15.9%;
-    --secondary-foreground: 0 0% 98%;
+
+    --primary: 210 40% 98%;
+    --primary-50: 229 100% 2%;
+    --primary-100: 229 84% 5%;
+    --primary-200: 222 47% 11%;
+    --primary-300: 217 33% 17%;
+    --primary-400: 215 25% 27%;
+    --primary-500: 215 20% 65%;
+    --primary-600: 213 27% 84%;
+    --primary-700: 214 32% 91%;
+    --primary-800: 210 40% 96%;
+    --primary-900: 210 40% 98%;
+    --primary-950: 210 40% 99%;
+    --primary-foreground: 222.2 47.4% 11.2%;
+    
+    --secondary: 222.2 47.4% 11.2%;
+    --secondary-foreground: 210 40% 98%;
+    
     --muted: 240 3.7% 15.9%;
     --muted-foreground: 240 5% 64.9%;
+    
     --accent: 240 3.7% 15.9%;
     --accent-foreground: 0 0% 98%;
+    
     --destructive: 0 62.8% 30.6%;
     --destructive-foreground: 0 0% 98%;
+    
     --border: 240 3.7% 15.9%;
     --input: 240 3.7% 15.9%;
-    --ring: 240 4.9% 83.9%;
+    --ring: 215 20.2% 65.1%;
   }
 
   body {
